--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <P>Tudo aquilo que você sempre quis saber sobre o mundo tech, em um único lugar.</P>
     </header>
     <nav>
-        <a href="ivins.html">Home</a>
+        <a href="#">Home</a>
         <a href="#">Notícias</a>
         <a href="#">Curiosidades</a>
         <a href="#">Fale conosco</a>
